--- a/text-classifier-IMDb.ipynb
+++ b/text-classifier-IMDb.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -113,6 +113,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['hello', ',', 'my', 'name', 'is', 'Nora', '.'], ['I', 'hope', 'I', 'will', 'soon', 'be', 'able', 'to', 'classify', 'text', '.'], ['The', 'weather', 'is', 'brilliant', 'today', '.'], ['Corona', 'is', 'everywhere', '.'], ['I', 'just', 'want', 'to', 'go', 'outside', 'and', 'do', 'stuff', '.'], ['But', 'I', 'still', 'do', 'but', 'allone', '.'], ['But', 'in', 'generall', 'people', 'should', \"n't\", 'go', 'outside', '.'], ['once', 'corona', 'is', 'over', 'we', 'can', 'for', 'sure', 'go', 'outside', 'again', '.']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sent_list = []\n",
+    "for s in tokenized_sent:\n",
+    "    sent_list.append(word_tokenize(s))\n",
+    "\n",
+    "print(sent_list)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -121,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +169,7 @@
        "[('.', 8), ('is', 4), ('I', 4), ('go', 3), ('outside', 3)]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -196,14 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'once', 'over', 'which', 'doesn', 've', 'she', 'be', 'but', 'through', 'these', 'so', 'am', 'the', \"won't\", 'as', 'further', 'until', 'themselves', 'hers', 'is', 'have', 'ourselves', 'from', 'off', 'such', 'only', 'an', 'our', \"you're\", 'about', 'were', 'a', 'or', 'their', 'and', 'are', 'you', \"shan't\", 'd', 'had', 'no', 'how', 'yourselves', 'up', 'having', 'than', 'does', 'will', 'm', 'down', 'very', 'i', \"wouldn't\", 'above', 'couldn', 'should', 'below', 'don', 'him', 'out', 'more', 'ma', \"aren't\", 'has', 'theirs', 'itself', 'in', \"you'd\", 'other', 'o', 'while', 'on', 's', 'me', 'now', \"doesn't\", \"should've\", 'doing', 'wouldn', 'them', 'it', 'mightn', 'her', 'yourself', 'by', 'after', \"couldn't\", 'when', 're', \"mustn't\", \"shouldn't\", \"you'll\", 'not', 'he', 'this', 'whom', 'before', \"mightn't\", 't', 'during', 'yours', 'if', \"wasn't\", 'too', 'because', 'myself', \"that'll\", 'ain', 'then', 'for', 'won', 'we', 'ours', \"you've\", \"she's\", 'did', 'hasn', 'mustn', 'into', 'that', \"weren't\", 'those', 'again', 'any', 'aren', 'y', 'herself', 'didn', 'll', 'to', 'shouldn', 'who', 'most', 'what', 'between', 'where', 'haven', 'was', 'they', \"isn't\", \"needn't\", 'against', 'isn', 'hadn', 'there', 'at', 'your', 'do', 'my', 'under', 'of', 'himself', 'nor', 'its', 'own', 'weren', \"it's\", 'with', 'being', 'why', 'same', 'some', 'needn', 'both', \"haven't\", 'wasn', 'all', \"don't\", 'been', \"hasn't\", \"hadn't\", 'shan', 'each', 'can', 'his', 'here', 'just', \"didn't\", 'few'}\n"
+      "{'not', 'during', 've', 'ourselves', 'their', 'aren', 'me', 'who', 'does', \"isn't\", 'd', 'these', \"wasn't\", 'in', 'very', 'himself', \"you're\", 'having', 'then', 'each', 'shan', 'from', 'here', 'some', 'all', \"weren't\", 'been', 'had', \"wouldn't\", 'most', 'with', 'or', 'when', 'o', 'couldn', 'they', 'hasn', 'of', 'where', 'which', 'both', 'down', 'she', 'hadn', \"you'll\", 'doing', 'there', 'themselves', 'he', 'between', 'mightn', 'theirs', 'by', 'own', 's', 'i', 'am', \"that'll\", 'further', 'shouldn', 'your', 'hers', 'y', 'about', 'this', \"don't\", 'that', 'herself', 'just', 'will', 'after', 'can', 'while', 'yourself', 'nor', 'should', 'my', 'off', 'ours', \"you've\", 'its', 'it', 'other', \"you'd\", 'into', 'as', 'but', 'than', 'her', 'don', 'was', \"it's\", 'same', 'needn', \"didn't\", 'at', 'yours', 'we', 'him', 'more', \"should've\", 'why', 'have', 'being', 'you', 'them', 'wasn', 'to', 'are', 'the', 'ain', 'a', 'over', 'if', 'weren', 'ma', 'once', 'wouldn', 'few', 'what', 'his', 'yourselves', 'again', 'through', 'above', 'any', 'were', \"mustn't\", 're', 'now', 'how', 'll', 'under', \"aren't\", \"she's\", 'no', \"hadn't\", 'against', 'has', 'and', \"hasn't\", 'm', 'is', 'be', 'such', \"needn't\", \"shouldn't\", 'too', 'because', 'doesn', 'do', 'only', \"shan't\", 'up', 'out', 'didn', 'won', 'itself', 'on', 'mustn', 'below', 't', \"mightn't\", 'whom', \"doesn't\", 'until', 'so', \"won't\", 'an', \"couldn't\", 'did', 'before', 'isn', 'haven', \"haven't\", 'our', 'those', 'myself', 'for'}\n"
      ]
     },
     {
@@ -230,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -239,17 +260,25 @@
      "text": [
       "Tokenized Sentence: ['hello, my name is Nora.', 'I hope I will soon be able to classify text.', 'The weather is brilliant today.', 'Corona is everywhere.', 'I just want to go outside and do stuff.', 'But I still do  but allone.', \"But in generall people shouldn't go outside.\", 'once corona is over we can for sure go outside again.'] \n",
       "\n",
-      "Filterd Sentence: ['hello, my name is Nora.', 'I hope I will soon be able to classify text.', 'The weather is brilliant today.', 'Corona is everywhere.', 'I just want to go outside and do stuff.', 'But I still do  but allone.', \"But in generall people shouldn't go outside.\", 'once corona is over we can for sure go outside again.']\n"
+      "Filterd Sentence: [None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None]\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "filtered_sent = []\n",
-    "for w in tokenized_sent:\n",
-    "    if w not in stop_words:\n",
-    "        filtered_sent.append(w)\n",
+    "for s in sent_list:\n",
+    "    for w in stop_words: \n",
+    "        if w in s:\n",
+    "            filtered_sent.append(s.remove(w))\n",
     "print(\"Tokenized Sentence:\",tokenized_sent, \"\\n\")\n",
-    "print(\"Filterd Sentence:\",filtered_sent)"
+    "print(\"Filterd Sentence:\",filtered_sent)\n",
+    "\n",
+    "filtered = []\n",
+    "# for sentence in all sentences\n",
+    "  # for all stop_words\n",
+    "      # sentence  = remove stop word from sentence\n",
+    "  # filtered.append(sentence)"
    ]
   },
   {
@@ -547,6 +576,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 122,
    "metadata": {},
    "outputs": [
@@ -666,8 +702,7 @@
     "## Dataset\n",
     "- IMDB\n",
     "- MR\n",
-    "\n",
-    "## Doit !!!!!!!!!!!!!"
+    "\n"
    ]
   },
   {
